--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="nav__link scrollto" href="#element5">Contact</a>
                 </nav>
                 <a href="#"><img class="search-logo" src="img/header/Musicology_search.png" alt="search"></a>
-                <button class="burger" type="button" id="burger"> <span class="burger__item">Menu</span></button>
+                <button class="burger" type="button" id="burger"> <span class="burger__item"></span></button>
             </div>
         </div>
     </header>
