--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@400;600;700&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
+    <link rel="stylesheet" href="css/default-styles.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Paralax</title>
 </head>
 <body>
@@ -48,8 +50,9 @@
                 <h2 class="dancetour__title">Dance Tour</h2>
                 <p class="dancetour__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Vivamus lacinia odio vitae vestibulum vestibulum.</p>
             </div>
-            <div class="dancetour__item">
-                <div class="dancetour__col">
+            <div class="slider-container" data-mobile="false">
+            <div class="dancetour__item swiper-wrapper">
+                <div class="dancetour__col card">
                     <div class="dancetour__content">
                         <div class="dancetour__img">
                             <img class="dancetour__photo" src="img/DanceTour/Dance_Tour1.jpg" alt="">
@@ -58,7 +61,7 @@
                         <p class="dancetour__text dancetour__text--cart">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
                 </div>
-                <div class="dancetour__col">
+                <div class="dancetour__col card">
                     <div class="dancetour__content">
                         <div class="dancetour__img">
                             <img class="dancetour__photo" src="img/DanceTour/Dance_Tour2.jpg" alt="">
@@ -67,7 +70,7 @@
                         <p class="dancetour__text dancetour__text--cart">Lorem ipsum dolor sit amet, consectetur adipiscing elit ipsum dolor sit amet, consectetur adipiscing</p>
                     </div>
                 </div>
-                <div class="dancetour__col">
+                <div class="dancetour__col card">
                     <div class="dancetour__content">
                         <div class="dancetour__img">
                             <img class="dancetour__photo" src="img/DanceTour/Dance_Tour3.jpg" alt="">
@@ -76,6 +79,7 @@
                         <p class="dancetour__text dancetour__text--cart">Lorem ipsum dolor sit amet.</p>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
     </section>
@@ -177,6 +181,19 @@
         </div>
     </section>
 
+    <!-- <div class="slider-container" data-mobile="false">
+        <div class="swiper-wrapper">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
+    </div> -->
+
     <!--Footer-->
     <footer class="footer">
         <div class="container">
@@ -239,6 +256,8 @@
         </div>
     </footer>
 </div>
+
+<script src="js/swiper.min.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
