--- a/index.html
+++ b/index.html
@@ -54,27 +54,30 @@
             <div class="dancetour__item swiper-wrapper">
                 <div class="dancetour__col card">
                     <div class="dancetour__content">
-                        <div class="dancetour__img">
+                        <picture class="dancetour__img">
+                            <source srcset="img/DanceTour/Dance_Tour1.webp" type="image/webp">
                             <img class="dancetour__photo" src="img/DanceTour/Dance_Tour1.jpg" alt="">
-                        </div>
+                        </picture>
                         <div class="dancetour__title dancetour__title--cart">America</div>
                         <p class="dancetour__text dancetour__text--cart">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
                 </div>
                 <div class="dancetour__col card">
                     <div class="dancetour__content">
-                        <div class="dancetour__img">
+                        <picture class="dancetour__img">
+                            <source srcset="img/DanceTour/Dance_Tour2.webp" type="image/webp">
                             <img class="dancetour__photo" src="img/DanceTour/Dance_Tour2.jpg" alt="">
-                        </div>
+                        </picture>
                         <div class="dancetour__title dancetour__title--cart">Canada</div>
                         <p class="dancetour__text dancetour__text--cart">Lorem ipsum dolor sit amet, consectetur adipiscing elit ipsum dolor sit amet, consectetur adipiscing</p>
                     </div>
                 </div>
                 <div class="dancetour__col card">
                     <div class="dancetour__content">
-                        <div class="dancetour__img">
+                        <picture class="dancetour__img">
+                            <source srcset="img/DanceTour/Dance_Tour3.webp" type="image/webp">
                             <img class="dancetour__photo" src="img/DanceTour/Dance_Tour3.jpg" alt="">
-                        </div>
+                        </picture>
                         <div class="dancetour__title dancetour__title--cart">Australia</div>
                         <p class="dancetour__text dancetour__text--cart">Lorem ipsum dolor sit amet.</p>
                     </div>
@@ -131,9 +134,10 @@
         <div class="container">
             <div class="dance__item">
                 <div class="dance__col">
-                    <div class="dance__img">
+                   <picture class="dance__img">
+                        <source srcset="img/dance/dance_1.webp" type="image/webp">
                         <img src="img/dance/dance_1.jpg" alt="">
-                    </div>
+                    </picture>
                 </div>
                 <div class="dance__col">
                     <div class="dance__body">
@@ -150,9 +154,10 @@
         <div class="container">
             <div class="dance__item dance__item--revers">
                 <div class="dance__col">
-                    <div class="dance__img">
+                    <picture class="dance__img">
+                        <source srcset="img/dance/dance_2.webp" type="image/webp">
                         <img src="img/dance/dance_2.jpg" alt="">
-                    </div>
+                    </picture>
                 </div>
                 <div class="dance__col">
                     <div class="dance__body">
@@ -180,19 +185,6 @@
             </div>
         </div>
     </section>
-
-    <!-- <div class="slider-container" data-mobile="false">
-        <div class="swiper-wrapper">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-        </div>
-    </div> -->
 
     <!--Footer-->
     <footer class="footer">
