--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
 
-<div class="wrapper" id="element1">
+<div class="wrapper" id="element">
     <!--Header-->
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <a class="header__logo" href="#element1">
+                <a class="header__logo" href="#element">
                     <img src="img/header/Musicology_logo.png" alt="Musicology-logo">
                 </a>
                 <nav class="nav">
@@ -27,7 +27,7 @@
                     <a class="nav__link scrollto" href="#element5">Contact</a>
                 </nav>
                 <a href="#"><img class="search-logo" src="img/header/Musicology_search.png" alt="search"></a>
-                <button class="burger" type="button" id="burger"> <span class="burger__item"></span></button>
+                <button class="burger" type="button" id="burger"><span class="burger__item"></span></button>
             </div>
         </div>
     </header>
@@ -179,7 +179,7 @@
                 <form class="form" action="/" method="post">
                     <div class="form__group">
                         <input class="form__input" name="email" type="text" placeholder="Your Email">
-                        <button class="btn btn__form" type="submit">Subscribe</button>
+                        <button class="btn form__btn" type="submit">Subscribe</button>
                     </div>
                 </form>
             </div>
