--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="about__body">
                 <h1 class="about__title">Title Here</h1>
                 <p class="about__text">Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.</p>
-                <button class="btn about__btn">Register Now</button>
+                <button class="btn about__btn" id="myBtn">Register Now</button>
             </div>
         </div>
     </section>
@@ -248,6 +248,28 @@
         </div>
     </footer>
 </div>
+
+<!--Modal-question-->
+
+    <div class="modal" id="myModal">
+        <div class="modal-content">
+            <button class="modal__close close" type="button" data-close><img src="img/modal-close.svg" alt="Close"> </button>
+            <div class="modal__body">
+                <h3 class="modal__title">Request a call</h3>
+                <form class="modal__form" action="/" method="post">
+                    <div class="modal__form__group">
+                        <input class="form__input-modal" name="login" type="text" placeholder="Your name">
+                    </div>
+                    <div class="modal__form__group">
+                        <input class="form__input-modal" name="login" type="text" placeholder="Phone number">
+                    </div>
+                    <div class="modal-btn__body modal__btn-registration">
+                        <button class="modal__btn" type="submit">Request a call</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
 <script src="js/swiper.min.js"></script>
 <script src="js/app.js"></script>
